--- a/一组/宗志亮/2.3作业/语雀后端/yqegg/package.json
+++ b/一组/宗志亮/2.3作业/语雀后端/yqegg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-mysql": "^3.0.0",
+    "egg-scripts": "^2.11.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -16,18 +18,15 @@
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
-    "egg-mysql": "^3.0.0",
-    "egg-validate": "^2.0.2",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0",
-    "jsonwebtoken": "^8.5.1"
+    "eslint-config-egg": "^7.1.0"
   },
   "engines": {
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-example",
-    "stop": "egg-scripts stop --title=egg-server-example",
+    "start": "egg-scripts start --daemon --title=egg-server-server",
+    "stop": "egg-scripts stop --title=egg-server-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
