--- a/一组/宗志亮/2.3作业/语雀前端/vue/package.json
+++ b/一组/宗志亮/2.3作业/语雀前端/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lianxi",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.4.3",
+    "@vue/cli-shared-utils": "^4.1.2",
+    "axios": "^0.19.2",
+    "core-js": "^3.4.4",
+    "debug": "^4.1.1",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
@@ -17,9 +21,8 @@
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "axios": "^0.19.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
