--- a/一组/张贾敏11/yqegg/package.json
+++ b/一组/张贾敏11/yqegg/package.json
@@ -19,7 +19,8 @@
     "egg-mysql": "^3.0.0",
     "egg-validate": "^2.0.2",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "engines": {
     "node": ">=10.0.0"
